implementa exclusão de grupos
