# swagger/authenticator.spec.yml
@@ -444,6 +444,45 @@ paths:
         "500":
           $ref: "#/components/responses/500"
 
+  /applications/{application_id}/groups/{group_id}:
+    delete:
+      operationId: DeleteGroup
+      security:
+        - bearerAuth: []
+      summary: Deleta um grupo de permissões de uma aplicação
+      tags:
+        - groups
+      parameters:
+        - in: path
+          name: application_id
+          schema:
+            type: string
+            format: uuid
+          x-go-extra-tags:
+            validate: required,uuid
+          required: true
+        - in: path
+          name: group_id
+          schema:
+            type: string
+            format: uuid
+          x-go-extra-tags:
+            validate: required,uuid
+          required: true
+      responses:
+        "200":
+          description: Grupo excluído
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/BasicResponse"
+        "400":
+          $ref: "#/components/responses/400"
+        "401":
+          $ref: "#/components/responses/401"
+        "500":
+          $ref: "#/components/responses/500"
+
   /applications/{application_id}/groups/{group_id}/permissions:
     post:
       operationId: AddPermission
